--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 aria-hidden="true"
                 class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-full max-h-full bg-[rgba(0,0,0,0.6)]"
             >
-                <div class="relative p-4 w-[60%] max-h-full">
+                <div class="relative p-4 w-[60%] max-h-full modal">
                     <!-- Modal content -->
                     <article class="relative bg-white rounded-lg shadow-sm">
                         <!-- Modal header -->
@@ -288,7 +288,7 @@
                 aria-hidden="true"
                 class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-full max-h-full bg-[rgba(0,0,0,0.6)]"
             >
-                <div class="relative p-4 w-[60%] max-h-full">
+                <div class="relative p-4 w-[60%] max-h-full modal">
                     <article class="relative bg-white rounded-lg shadow-sm">
                         <!-- Modal header -->
                         <div
@@ -347,7 +347,7 @@
                 aria-hidden="true"
                 class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-full max-h-full bg-[rgba(0,0,0,0.6)]"
             >
-                <div class="relative p-4 w-[60%] max-h-full">
+                <div class="relative p-4 w-[60%] max-h-full modal">
                     <!-- Modal content -->
                     <article class="relative bg-white rounded-lg shadow-sm">
                         <!-- Modal header -->
